tests/NormalTests/paczka1/small_fuzzy/72167755.err
Error in line 2: HhhTrTDe S680 +7,6
Error in line 1: HhhTrTDe A412 1,5
Error in line 5: HhhTrTDe A412 0,4
Error in line 6: wHwDIOMSCz A973 71,5
